@startuml
abstract class Creature {
    + name: String
    + position: String
    + orientation: String
    + getName(): String
    + getPosition(): String
    + getGravity(): String
    + setName(name: String): void
    + setName(position: String): void
    + setName(orientation: String): void

}

class Neznaika {
    + avoid(): void
    + dontfeel(): void
    + weightlessness(): void
    + forget(): String
    + walkedAhead(WalkTypes parametres): void
    + upsideDown(UpsidePosition: parametres):void
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}
class Ponchik {
    + avoid(): void
    + dontfeel(): void
    + weightlessness(): void
    + forget(): String
    + Feeling(): void
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}
enum WalkTypes {
    AHEAD
    BEHIND
    - type: string
    + Type(): String
}
enum WeightType {
    NORMAL
    GOOD
    - type: string
    + Type(): String
}

enum AttractionStrength {
    STRONG
    WEAK
    EQUAL
    - type: string
    + Type(): String
}
enum UpsidePosition {
    UP
    DOWN
    - type: string
    + Type(): String
}
enum BootsTight {
    TIGHT
    - type: string
    + Type(): String
}

enum WeightlessnessTime {
    LONG
    SHORT
    - type: string
    + Type(): String
}
enum GravityStrength {
    MORE
    LESS
    - type: string
    + Type(): String
}
enum LegsPosition {
    UP
    DOWN
    - type: string
    + Type(): String
}
enum Fly {
    UP
    DOWN
    - type: string
    + Type(): String
}


interface GetWeight {
    + getweight(name1, p1, p2, name2): void
}
interface Jump {
    + jump(name1, name2, name3, name4): void
}
interface Afraid {
    + afraid(name1, name2, name3, name4): void
}
interface Imagine {
    + imagine(): void
}

interface Сomparison {
    + comparison(name1, name2): void
}
interface ExactСomparison {
    + exactcomparison(name1, name2, p1, p2): void
}
interface Force {
    + force(): void
}











class СreatureObj {
    + name
    getName(): String
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}
class SpaceBody {
    + name
    getName(): String
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}


''''''''''''''''''''''''
class Location {
    + surfaceType: String
    + skyDescription: String
    + getSkyDescription():
    + getSkyDescription()
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}

class SpaceBoots {
    + size
    + material
    + attachToSurface()
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}


class CelestialBody {
    + name
    + gravity
    + getName(): String
    + getGravity(): String
    + toString(): String
    + equals(Object): boolean
    + hashCode(): int
}



Creature --> Neznaika
Creature --> Ponchik


Neznaika --> Imagine
Neznaika ---> Afraid
Neznaika --> GetWeight
Neznaika --> Jump
Ponchik --> GetWeight
Ponchik -- Jump


CelestialBody --> ExactСomparison
CelestialBody --> Сomparison
Neznaika --> Force
Force --> BootsTight
Neznaika ---> WeightlessnessTime
Neznaika ---> WalkTypes
Сomparison --> AttractionStrength
ExactСomparison --> GravityStrength
GetWeight ---> WeightType
Ponchik ----> LegsPosition
Neznaika ----> UpsidePosition
Afraid --> Fly
@enduml

